[tool.poetry]
name = "blockanalyst"
version = "0.1.0"
description = "A package for generating urban block geometry and calculate block-level morphological metrics."
authors = ["Mengbi Ye"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
